labs/10-pod-dp-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: docker-python-pod
  labels:
    app: docker-python
spec:
  containers:
  - name: docker-python
    image: <ACR-Login-Server-Domain>/docker-python:v1
    ports:
    - containerPort: 5000
