labs/11-deployment-hpa-nginx-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxhello-blue
  labels:
    app.kubernetes.io/name: nginxhello-blue
    app.kubernetes.io/part-of: nginxhello-blue
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginxhello-blue
      app.kubernetes.io/part-of: nginxhello-blue

  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginxhello-blue
        app.kubernetes.io/part-of: nginxhello-blue
    spec:
      containers:
      - name: nginxhello-blue
        image: nbrown/nginxhello:mainline
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
