labs/12-service-nginx-blue-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxhello-blue
  labels:
    app.kubernetes.io/name: nginxhello-blue
    app.kubernetes.io/part-of: nginxhello-blue
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: nginxhello-blue
    app.kubernetes.io/part-of: nginxhello-blue
